--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Vite App</title>
   </head>
-  <body class="bg-ds-gray flex justify-center">
+  <body class="bg-ds-gray flex justify-center py-30px">
     <div id="app"></div>
     <script type="module" src="/src/main.js"></script>
   </body>
