--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite App</title>
+    <title>Grid Generator</title>
   </head>
   <body class="bg-ds-gray flex justify-center py-30px">
     <div id="app"></div>
